--- a/store/blocks/global/components/menu/category/menu-category-iphone.jsonc
+++ b/store/blocks/global/components/menu/category/menu-category-iphone.jsonc
@@ -226,7 +226,8 @@
                 "noFollow": false,
                 "tagTitle": "Accesorios",
                 "text": "Accesorios"
-            }
+            },
+            "blockClass": ["menu-item-blue"]
         }
     },
     "menu-item#iphone-accesorios-ver todo": {
