--- a/store/blocks/global/components/menu/category/menu-category-watch.jsonc
+++ b/store/blocks/global/components/menu/category/menu-category-watch.jsonc
@@ -179,7 +179,8 @@
                 "noFollow": false,
                 "tagTitle": "Accesorios",
                 "text": "Accesorios"
-            }
+            },
+            "blockClass": ["menu-item-blue"]
         }
     },
     "menu-item#watch-accesorios-ver-todo": {
