feat:update mobile menu

--- a/store/blocks/mobile/components/menu.jsonc
+++ b/store/blocks/mobile/components/menu.jsonc
@@ -1,7 +1,7 @@
 {
     "menu#drawer": {
         "children": [
-            "vtex.menu@2.x:menu#global__websites"
+          "vtex.menu@2.x:menu#mobile__websites"
         ],
         "props": {
           "orientation": "vertical"
