--- a/manifest.json
+++ b/manifest.json
@@ -53,7 +53,8 @@
     "vtex.store-newsletter": "1.x",
     "vtex.product-highlights": "2.x",
     "vtex.product-price": "1.x",
-    "vtex.modal-layout": "0.x"
+    "vtex.modal-layout": "0.x",
+    "vtex.disclosure-layout": "1.x"
   },
   "$schema": "https://raw.githubusercontent.com/vtex/node-vtex-api/master/gen/manifest.schema"
 }
