--- a/store/blocks/global/components/slider-layout.jsonc
+++ b/store/blocks/global/components/slider-layout.jsonc
@@ -10,8 +10,9 @@
           "infinite": true,
           "showNavigationArrows": "always",
           "blockClass": "carousel",
+          "fullWidth":true,
           "autoplay": {
-            "timeout": 30000,
+            "timeout": 4000,
             "stopOnHover": true
           }
         },
@@ -28,6 +29,28 @@
           "image#banner__desktop-10",
           "image#banner__desktop-11",
           "image#banner__desktop-12"
+        ]
+      },
+      "slider-layout#global__mac__silder-1": {
+        "title": "slider home para mac",
+        "props": {
+          "itemsPerPage": {
+            "desktop": 1,
+            "tablet": 1,
+            "phone": 1
+          },
+          "infinite": true,
+          "showNavigationArrows": "never",
+          "showPaginationDots":"never",
+          "blockClass": "global__mac__silder-1",
+          "autoplay": {
+            "timeout": 4000,
+            "stopOnHover": true
+          }
+        },
+        "children": [
+          "image#global__mac__slider--img1",
+          "image#global__mac__slider--img2"
         ]
       }
 }
