--- a/store/blocks/global/components/menu/departament/menu-departament.jsonc
+++ b/store/blocks/global/components/menu/departament/menu-departament.jsonc
@@ -29,7 +29,7 @@
       "highlight": false,
       "itemProps": {
         "type": "internal",
-        "href": "https://www.maconline.com/t/mac",
+        "href": "/mac",
         "noFollow": false,
         "tagTitle": "Mac",
         "text": "Mac"
