--- a/store/blocks/global/screen/mac.jsonc
+++ b/store/blocks/global/screen/mac.jsonc
@@ -1,106 +1,8 @@
 {
     "store.custom#mac": {
         "blocks": [
-            "flex-layout.row#global__mac__row1",
-            "flex-layout.row#global__mac__row2",
-            "flex-layout.row#global__mac__row3",
-            "flex-layout.row#global__mac__row4",
-            "flex-layout.row#global__mac__row5"
+            "responsive-layout.desktop#mac",
+            "responsive-layout.mobile#mac"
         ]
-    },
-    "flex-layout.row#global__mac__row1": {
-        "children": [
-            "flex-layout.col#global__mac__row1__col1",
-            "flex-layout.col#global__mac__row1__col2"
-        ],
-        "props": {
-            "blockClass": "global__mac__row1"
-        }
-    },
-    "flex-layout.col#global__mac__row1__col1": {
-        "children": [
-            "rich-text#global__mac--title"
-        ],
-        "props": {
-            "blockClass": "global__mac__row1_col1"
-        }
-    },
-    "flex-layout.col#global__mac__row1__col2": {
-        "children": [
-            "rich-text#global__mac--breadCrumb"
-        ],
-        "props": {
-            "blockClass": "global__mac__row1_col2"
-        }
-    },
-    "flex-layout.row#global__mac__row2": {
-        "children": [
-            "flex-layout.col#global__mac__row2__col1"
-        ],
-        "props": {
-            "fullWidth": true,
-            "blockClass": "global__mac__row2"
-        }
-    },
-    "flex-layout.col#global__mac__row2__col1": {
-        "children": [
-            "slider-layout#global__mac__silder-1"
-        ],
-        "props": {
-            "blockClass": "global__mac__row2_col1"
-        }
-    },
-    "flex-layout.row#global__mac__row3": {
-        "children": [
-            "flex-layout.col#global__mac__row3__col1"
-        ],
-        "props": {
-            "fullWidth": true,
-            "blockClass": "global__mac__row3"
-        }
-    },
-    "flex-layout.col#global__mac__row3__col1": {
-        "children": [
-            "shelf#mac"
-        ],
-        "props": {
-            "blockClass": "global__mac__row3_col1"
-        }
-    },
-    "flex-layout.row#global__mac__row4": {
-        "children": [
-            "flex-layout.col#global__mac__row4__col1"
-        ],
-        "props": {
-            "fullWidth": true,
-            "blockClass": "global__mac__row4"
-        }
-    },
-    "flex-layout.col#global__mac__row4__col1": {
-        "children": [
-            "shelf#mac-recommended"
-        ],
-        "props": {
-            "blockClass": "global__mac__row4_col1"
-        }
-    },
-    "flex-layout.row#global__mac__row5": {
-        "children": [
-            "flex-layout.col#global__mac__row5__col1"
-        ],
-        "props": {
-            "blockClass": "global__mac__row5",
-            "fullWidth":true
-        }
-    },
-    "flex-layout.col#global__mac__row5__col1": {
-        "children": [
-            "image#global__mac__footer--img3",
-            "image#global__mac__footer--img2",
-            "image#global__mac__footer--img1"
-        ],
-        "props": {
-            "blockClass": "global__mac__row5_col1"
-        }
     }
 }
